--- a/index.html
+++ b/index.html
@@ -499,8 +499,8 @@
                 Web<span id="studio-footer">Studio</span>
               </li>
               <li class="street-footer">m. Warszawa, Aleje Jerozolimskie 21</li>
-              <li class="mail-tel-footer">info@example.com</li>
-              <li class="mail-tel-footer">+48 111 111 111</li>
+              <li href="mailto:info@devstudio.com" class="mail-footer">info@example.com</li>
+              <li class="tel-footer">+48 111 111 111</li>
             </ul>
           </div>
           <div>
@@ -559,6 +559,34 @@
                 </li>
               </ul>
             </div>
+          </div>
+          <div class="newsletter">
+            <ul>
+              <li>
+                <p class="footer-zapisz">ZAPISZ SIĘ DO NEWSLETTERA</p>
+              </li>
+              <li>
+                <form name="send-newsletter" autocomplete="on" novalidate class="footer-form">
+                  <label for="nletter" >
+                  <input type="email" name="email" id="nletter" placeholder="Email" class="footer-label all-labels"/>
+                  </label>
+
+                  <button type="submit" class="footer-submit">
+                    <div class="footer-submit-text">Zapisz się
+                      
+                    </div>
+                    <div> 
+                      <svg
+                        class="footer-plane"
+                        fill="#FFFFFF"
+                        >
+                        <use href="./images/icons.svg#icon-plane"></use>
+                      </svg>
+                      </div>
+                  </button>
+                </form>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
