--- a/portfolio.html
+++ b/portfolio.html
@@ -301,11 +301,8 @@
                   <label for="nletter" >
                   <input type="email" name="email" id="nletter" placeholder="Email" class="footer-label all-labels"/>
                   </label>
-
                   <button type="submit" class="footer-submit">
-                    <div class="footer-submit-text">Zapisz się
-                      
-                    </div>
+                    <div class="footer-submit-text">Zapisz się</div>
                     <div> 
                       <svg
                         class="footer-plane"
