--- a/portfolio.html
+++ b/portfolio.html
@@ -33,9 +33,9 @@
           </li>
           <li><a href="" class="kontakt-nav">Kontakt</a></li>
 
-          <li>
+           <li>
             <a href="mailto:info@devstudio.com" class="mail-nav">
-              <svg class="icon-mail-nav" fill="currentColor" width="16px" height="12px">
+              <svg class="icon-mail" fill="currentColor">
                 <use href="./images/icons.svg#icon-mail"></use> 
               </svg>info@devstudio.com</a>
           </li>
