--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
     </footer>
 
 <div class="backdrop is-hidden" data-modal>
-  <div class="modal">
+  <div class="modal" data-modal-window>
     <button type="button" class="close-btn" data-modal-close><div class="x">×</div></button>
     <div class="modal-title">Zostaw swoje dane w formularzu poniżej</div>
   <div class="modal-container">
@@ -603,7 +603,7 @@
              fill="#212121">
         <use href="./images/icons.svg#icon-head"></use>
         </svg>
-        <input type="text" class="modal-form-input all-labels" name="username" id="modal-user">
+        <input type="text" class="modal-form-input all-labels" name="username" id="modal-user" required>
         </div>
       </label>
 
@@ -614,7 +614,7 @@
              fill="#212121">
         <use href="./images/icons.svg#icon-modalphone"></use>
         </svg>
-        <input type="tel" class="modal-form-input all-labels" name="phone_number" id="modal-phone"/>
+        <input type="tel" class="modal-form-input all-labels" name="phone_number" id="modal-phone" required/>
       </div>
       </label>
 
@@ -625,7 +625,7 @@
              fill="#212121">
         <use href="./images/icons.svg#icon-modalmail"></use>
         </svg>
-        <input type="email" class="modal-form-input all-labels" name="mail" id="modal-mail">
+        <input type="email" class="modal-form-input all-labels" name="mail" id="modal-mail" required>
         </div>
       </label>
 
@@ -634,12 +634,14 @@
         <textarea name="feedback" class="modal-form-feedback all-labels" placeholder="Wprowadź tekst" id="modal-feedback"></textarea>
       </label>
 
-        <label for="check" class="check-container">
-        <input type="checkbox" id="check" name="regulamin" class="modal-check" />
+      <div class="check-container">
+        <input type="checkbox" id="check" name="policy" class="modal-form-policy visually-hidden" />
+        <label for="check" class="check-bird">
           <span class="modal-check-text">
             Oświadczam iż akceptuję <a href="#" class="reg">Regulamin</a> i <a href="#" class="reg">Politykę Prywatności.</a>
           </span>
-      </label>
+        </label>
+      </div>
 
        <div class="modal-btn"> 
          <button type="submit" class="modal-submit">
