--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
       </label>
 
       <div class="check-container">
-        <input type="checkbox" id="check" name="policy" class="modal-form-policy visually-hidden" />
+        <input type="checkbox" id="check" name="policy" class="modal-form-policy visually-hidden" required/>
         <label for="check" class="check-bird">
           <span class="modal-check-text">
             Oświadczam iż akceptuję <a href="#" class="reg">Regulamin</a> i <a href="#" class="reg">Politykę Prywatności.</a>
